Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-3601

C++ API header contains breaking include

    XMLWordPrintableJSON

Details

    Description

      Problem file/line: https://github.com/apache/avro/blob/master/lang/c%2B%2B/api/CustomFields.hh#L24

      Steps to reproduce:

      • Download AVRO version 1.11.1
      • Execute ./build.sh install (from the lang/c++ directory)
      • Navigate to the installed include directory
      • Verify this file (and path) "../impl/json/JsonDom.hh" does NOT exists in the installed include directory

      Relates to: https://issues.apache.org/jira/browse/AVRO-3547

      Attachments

        Issue Links

          Activity

            People

              mgrigorov Martin Tzvetanov Grigorov
              Ruffing Mike Ruffing
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 5h 20m
                  5h 20m