AVRO-3601: C++ API header contains breaking include

Move impl/json/JsonDom.hh to api/json/

https://github.com/apache/avro/blob/ce2439d7a7669a5c7f2fa555c661770fbe67493a/lang/c%2B%2B/CMakeLists.txt#L97
includes the 'api/' folder, CMAKE_CURRENT_BINARY_DIR and Boost's
include dirs

Signed-off-by: Martin Tzvetanov Grigorov <mgrigorov@apache.org>